--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <!-- Tema 1 -->
         <section id="UD01" class="fondoArticulo">
             <h2>Tema 1. Introducción a lenguajes de marcas</h2>
-            <div id="tarea">
-                <article id="tarea">
+            <div>
+                <article>
                     <a href="/116LMSGIProyectoLMSGI/unidad1/UD1_MapaConceptual.pdf">
                         <h3>Tarea 1.</h3>
                         <p>Mapa conceptual</p>
@@ -49,7 +49,7 @@
         <!-- Tema 2 -->
         <section id="UD02" class="fondoArticulo">
             <h2>Tema 2. Utilización de los lenguajes de marcas</h2>
-            <div id="tarea">
+            <div>
                 <article>
                     <a href="/116LMSGIProyectoLMSGI/unidad2/01/">
                         <h3>Tarea 1.</h3>
