--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- 
     Autor: Irene Rodríguez
     Descripción: Index de la asignatura LMSGI.
-    Fecha de modificación 15/01/2025
+    Fecha de modificación 02/02/2025
 -->
 
 <head>
@@ -22,6 +22,7 @@
     </header>
     <nav>
         <ul>
+            <li><a href="#EXAM">Exámenes</a></li>
             <li><a href="#UD01">Tema 1</a></li>
             <li><a href="#UD02">Tema 2</a></li>
             <li><a href="#UD03">Tema 3</a></li>
@@ -33,6 +34,25 @@
     </nav>
 
     <main>
+        <!--Exámenes-->
+        <section id="EXAM" class="fondoArticulo">
+            <h2>Exámenes realizados durante el curso</h2>
+            <div>
+                <article>
+                    <a href="/116LMSGIProyectoLMSGI/unidad2/01/">
+                        <h3>Examen 1.</h3>
+                        <p>Web de los volcanes</p>
+                    </a>
+                </article>
+                <article>
+                    <a href="/116LMSGIProyectoLMSGI/examenes/02/">
+                        <h3>Examen 2.</h3>
+                        <p>Web para los fans de los juegos del hambre</p>
+                    </a>
+                </article>
+            </div>
+        </section>
+
         <!-- Tema 1 -->
         <section id="UD01" class="fondoArticulo">
             <h2>Tema 1. Introducción a lenguajes de marcas</h2>
