--- a/examenes/02/lasaga.html
+++ b/examenes/02/lasaga.html
@@ -37,45 +37,54 @@
     </header>
 
     <main>
-        <section>
-            <article>
-                <h3>LOS JUEGOS DEL HAMBRE</h3>
-                <img src="webroot/media/images/juegos.JPG" alt="Portadas de los juegos del hambre"
-                    title="Portadas de los juegos del hambre">
-                <p> Ganar significa fama y riqueza. Perder significa una muerte segura.</p>
-                <p> En una oscura versión del futuro próximo, doce chicos y doce chicas se ven obligados a participar en
-                    un
-                    reality show llamado Los juegos del hambre. Solo hay una regla: matar o morir.</p>
-                <p> Cuando Katniss Everdeen, una joven de dieciséis años, se presenta voluntaria para ocupar el lugar de
-                    su
-                    hermana en los juegos, lo entiende como una condena a muerte.</p>
-            </article>
-            <article>
-                <h3>EN LLAMAS</h3>
-                <img src="webroot/media/images/llamas.JPG" alt="Potada de en llamas" title="Portada de en llamas">
-                <p> Ganar significa fama y riqueza. Perder significa una muerte segura.</p>
-                <p> En una oscura versión del futuro próximo, doce chicos y doce chicas se ven obligados a participar en
-                    un
-                    reality show llamado Los juegos del hambre. Solo hay una regla: matar o morir.</p>
-                <p> Cuando Katniss Everdeen, una joven de dieciséis años, se presenta voluntaria para ocupar el lugar de
-                    su
-                    hermana en los juegos, lo entiende como una condena a muerte.</p>
-            </article>
-            <article>
-                <h3>SINSAJO</h3>
-                <img src="webroot/media/images/sinsajo.JPG" alt="Portada de sinsajo" title="Portada de sinsajo">
-                <p> Ganar significa fama y riqueza. Perder significa una muerte segura.</p>
-                <p> En una oscura versión del futuro próximo, doce chicos y doce chicas se ven obligados a participar en
-                    un
-                    reality show llamado Los juegos del hambre. Solo hay una regla: matar o morir.</p>
-                <p> Cuando Katniss Everdeen, una joven de dieciséis años, se presenta voluntaria para ocupar el lugar de
-                    su
-                    hermana en los juegos, lo entiende como una condena a muerte.</p>
-            </article>
+        <section id="personajes">
+            <h3>Libros</h3>
+            <h4 class="libros">LOS JUEGOS DEL HAMBRE</h4>
+            <div class="contenedor">
+                <div class="lasaga">
+                    <div class="imagenlibro"><img src="webroot/media/images/juegos.JPG" alt="juegos"></div>
+                    <div class="textolibro">
+                        <p> Ganar significa fama y riqueza. Perder significa una muerte segura.</p>
+                        <p> En una oscura versión del futuro próximo, doce chicos y doce chicas se
+                            ven obligados a participar en un reality show llamado Los juegos del hambre.
+                            Solo hay una regla: matar o morir.</p>
+                        <p> Cuando Katniss Everdeen, una joven de dieciséis años, se presenta voluntaria
+                            para ocupar el lugar de su hermana en los juegos, lo entiende como una condena a muerte.</p>
+                    </div>
+                </div>
+            </div>
+            
+            <h4 class="libros">EN LLAMAS</h4>
+            <div class="contenedor">
+                <div class="lasaga">
+                    <div class="imagenlibro"> <img src="webroot/media/images/llamas.JPG" alt="llamas"></div>
+                    <div class="textolibro">
+                        <p> Ganar significa fama y riqueza. Perder significa una muerte segura.</p>
+                        <p> En una oscura versión del futuro próximo, doce chicos y doce chicas se ven
+                            obligados a participar en un reality show llamado Los juegos del hambre.
+                            Solo hay una regla: matar o morir.</p>
+                        <p> Cuando Katniss Everdeen, una joven de dieciséis años, se presenta voluntaria
+                            para ocupar el lugar de su hermana en los juegos, lo entiende como una condena a muerte.</p>
+                    </div>
+                </div>
+            </div>
+            <h4 class="libros">SINSAJO</h4>
+            <div class="contenedor">
+                <div class="lasaga">
+                    <div class="imagenlibro">
+                        <img src="webroot/media/images/sinsajo.JPG" alt="sinsajo">
+                    </div>
+                    <div class="textolibro">
+                        <p> Ganar significa fama y riqueza. Perder significa una muerte segura.</p>
+                        <p> En una oscura versión del futuro próximo, doce chicos y doce chicas se
+                            ven obligados a participar en un reality show llamado Los juegos del hambre.
+                            Solo hay una regla: matar o morir.</p>
+                        <p> Cuando Katniss Everdeen, una joven de dieciséis años, se presenta voluntaria
+                            para ocupar el lugar de su hermana en los juegos, lo entiende como una condena a muerte.</p>
+                    </div>
+                </div>
+            </div>
         </section>
-
-
-
     </main>
 
     <footer>
