agregados id para dar estilos

--- a/examenes/02/personajes.html
+++ b/examenes/02/personajes.html
@@ -35,24 +35,27 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
-        <h2>Personajes Principales</h2>
-        <div>
-            <article>
-                <h3>KATNISS EVERDEEN</h3>
-                <img src="webroot/media/images/katniss.JPG">
-            </article>
-            <article>
-                <h3>PEETA MELLARK</h3>
-                <img src="webroot/media/images/peeta.JPG">
-            </article>
-            <article>
-                <h3>GALE HAWTHORNE</h3>
-                <img src="webroot/media/images/gale.jpg">
-            </article>
-        </div>
+        <section id="personajes">
+            <h2>Personajes Principales</h2>
+            <div id="grupoPersonajes">
+                <article class="personaje">
+                    <h3>KATNISS EVERDEEN</h3>
+                    <img src="webroot/media/images/katniss.JPG" alt="Katniss Everdeen">
+                </article>
+                <article class="personaje">
+                    <h3>PEETA MELLARK</h3>
+                    <img src="webroot/media/images/peeta.JPG" alt="Peeta Mellark">
+                </article>
+                <article class="personaje">
+                    <h3>GALE HAWTHORNE</h3>
+                    <img src="webroot/media/images/gale.jpg" alt="Gale Hawthorne">
+                </article>
+            </div>
+        </section>
     </main>
+
 
     <footer>
         <div class="footer-content">
