Agregada tarea 3, tema 3

--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
                         <p>Tarea 2: Añadir elementos al DOM</p>
                     </article>
                 </a>
+                <a href="/116LMSGIProyectoLMSGI/unidad3/03/index.html"  target="_blank">
+                    <article>
+                        <p>Tarea 3: Tablero de imágenes</p>
+                    </article>
+                </a>
             </div>
         </section>
 
