corregida ruta de archivos en el footer

--- a/unidad3/02/index.html
+++ b/unidad3/02/index.html
@@ -20,7 +20,7 @@
 
 <footer>
   <p>
-    Todos los derechos reservados. Creado por: <a href="/116LMSGIProyectoLMSGI/index.html">Irene Rodríguez Rodríguez
+    Todos los derechos reservados. Creado por: <a href="../../index.html">Irene Rodríguez Rodríguez
     </a>
   </p>
 </footer>
