--- a/unidad3/03/index.html
+++ b/unidad3/03/index.html
@@ -23,7 +23,7 @@
         <!-- Las casillas se llenarán con JS-->
     </div>
     <footer>
-        <div>Todos los derechos reservados. Creado por: <a href="../index">Irene Rodríguez Rodríguez</a></div>
+        <div>Todos los derechos reservados. Creado por: <a href="../../index.html">Irene Rodríguez Rodríguez</a></div>
     </footer>
 </body>
 <!-- El script tiene que ir aqui porque sino no funciona -->
