--- a/unidad3/01/index.html
+++ b/unidad3/01/index.html
@@ -34,7 +34,7 @@
   <button id="boton3">Cambiar párrafos</button>
   <br>
   <p>
-    Todos los derechos reservados. Creado por: <a href="/116LMSGIProyectoLMSGI/index.html">Irene Rodríguez Rodríguez
+    Todos los derechos reservados. Creado por: <a href="../../index.html">Irene Rodríguez Rodríguez
     </a>
   </p>
 </footer>
