--- a/unidad3/03/index.html
+++ b/unidad3/03/index.html
@@ -2,8 +2,9 @@
 <!--
     Nombre y apellidos: Irene Rodríguez R.
     Fecha de creación: 27 de abril de 2025
-    Fecha de modificación: 27 de abril de 2025
-    Descripción: Tablero con 6 imágenes (generadas de manera aleatoria con picsum) y cada una de estas imágenes se almacena en una casilla
+    Fecha de modificación: 07 de mayo de 2025
+    Descripción: Tablero con 6 imágenes (generadas de manera aleatoria con picsum) y cada una de estas imágenes se almacena en una casilla.
+                Además de eso, se han agregado mejoras al ejercicio; diferentes eventos que se han codificado en javascript
 -->
 <html lang="es">
 
@@ -22,6 +23,10 @@
     <div class="tablero" id="tablero">
         <!-- Las casillas se llenarán con JS-->
     </div>
+
+    <button id="vaciarTablero" alt="Vaciar las casillas actuales en el tablero">Vaciar tablero</button>
+    <button id="rellenarTablero">Rellenar tablero</button>
+
     <footer>
         <div>Todos los derechos reservados. Creado por: <a href="../../index.html">Irene Rodríguez Rodríguez</a></div>
     </footer>
