--- a/unidad6/03/index.html
+++ b/unidad6/03/index.html
@@ -9,7 +9,20 @@
 
 <body>
     <h1>Consultas y resultados - XQuery</h1>
-    
+    <!--<table id="tablaEjercicios">
+        <thead>
+            <tr>
+                <th>Ejercicio</th>
+                <th>Imagen Query</th>
+                <th>Resultado</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <script src="script.js"></script>-->
+    <p>Página en proceso...</p>
+
 </body>
 <footer>
     <p>2024-25 IES LOS SAUCES. © Todos los derechos reservados. <a href="/116LMSGIProyectoLMSGI/index.html">Irene
