--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         <section id="EXAM" class="fondoArticulo">
             <h2>Exámenes realizados durante el curso</h2>
             <div>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/01/"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/01/">
                     <article>
                         <h3>Examen 1.</h3>
                         <p>Web de los volcanes</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/examen/02/inicio.html" target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/examen/02/inicio.html">
                     <article>
                         <h3>Examen 2.</h3>
                         <p>Web para los fans de los juegos del hambre</p>
@@ -49,15 +49,15 @@
                 </a>
                 <article>
                     <h3>Prueba examen 1</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-01/01/01.xsd"  target="_blank">INPUT(.XSD)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-02/src/FmAWeb.xsl"  target="_blank">SRC(.XSL)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-02/target/JoaquinSabina.html" target="_blank">TARGET(.HTML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-01/01/01.xsd">INPUT(.XSD)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-02/src/FmAWeb.xsl">SRC(.XSL)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-02/target/JoaquinSabina.html">TARGET(.HTML)</a></p>
                 </article>   
                 <article>
                     <h3>Prueba examen 1</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-02/input/JoaquinSabina.xml"  target="_blank">INPUT(.XML)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-01/02/02.dtd"  target="_blank">02(.DTD)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-01/03/03.pdf" target="_blank">03 (.MD)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-02/input/JoaquinSabina.xml">INPUT(.XML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-01/02/02.dtd">02(.DTD)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/examen/Ex2ev-01/03/03.pdf">03 (.MD)</a></p>
                 </article>           
             </div>
         </section>
@@ -66,7 +66,7 @@
         <section id="UD01" class="fondoArticulo">
             <h2>Tema 1. Introducción a lenguajes de marcas</h2>
             <div>
-                <a href="/116LMSGIProyectoLMSGI/unidad1/index.html"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad1/index.html">
                     <article>
                         <p>Tarea 1: Mapa mental</p>
                     </article>
@@ -78,32 +78,32 @@
         <section id="UD02" class="fondoArticulo">
             <h2>Tema 2. Utilización de los lenguajes de marcas</h2>
             <div>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/01/"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/01/">
                     <article>
                         <p>Tarea 1: Web de los volcanes</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/02/"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/02/">
                     <article>
                         <p>Tarea 2: Horario del curso escolar</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/02.1/"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/02.1/">
                     <article>
                         <p>Tarea 2.1: Horario del curso escolar (Modificado)</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/03/"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/03/">
                     <article>
                         <p>Tarea 3: Formulario de animales domésticos</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/04/"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/04/">
                     <article>
                         <p>Tarea 4: Multimedia sobre animales domésticos</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad2/05/" target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad2/05/">
                     <article>
                         <p>Tarea 5: Dados</p>
                     </article>
@@ -115,17 +115,17 @@
         <section id="UD03" class="fondoArticulo">
             <h2>Tema 3. Manipulación de documentos web</h2>
             <div>
-                <a href="/116LMSGIProyectoLMSGI/unidad3/01/index.html"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad3/01/index.html">
                     <article>
                         <p>Tarea 1: Acceso y modificación de elementos del DOM</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad3/02/index.html"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad3/02/index.html">
                     <article>
                         <p>Tarea 2: Añadir elementos al DOM</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad3/03/index.html"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad3/03/index.html">
                     <article>
                         <p>Tarea 3: Tablero de imágenes</p>
                     </article>
@@ -137,32 +137,32 @@
         <section id="UD04" class="fondoArticulo">
             <h2>Tema 4. XML. DTD. Schema XML</h2>
             <div>
-                <a href="/116LMSGIProyectoLMSGI/unidad4/01/01.xml" target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad4/01/01.xml">
                     <article>
                         <p>Tarea 1: Correo electrónico</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad4/02/02.xml"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad4/02/02.xml">
                     <article>
                         <p>Tarea 2: Biblioteca</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad4/02.2/02.xml"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad4/02.2/02.xml">
                     <article>
                         <p>Tarea 2.2: Biblioteca (Modificado)</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad4/03/03.xml"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad4/03/03.xml">
                     <article>
                         <p>Tarea 3: Lenguajes de programación</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad4/04/04.xml"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad4/04/04.xml">
                     <article>
                         <p>Tarea 4: Universidad</p>
                     </article>
                 </a>
-                <a href="/116LMSGIProyectoLMSGI/unidad4/04.2/04.2.xml"  target="_blank">
+                <a href="/116LMSGIProyectoLMSGI/unidad4/04.2/04.2.xml">
                     <article>
                         <p>Tarea 4.2: Universidad (Modificado)</p>
                     </article>
@@ -176,43 +176,43 @@
             <div>
                 <article>
                     <h3>Tarea 1. XPath de la universidad.</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/01/01.md"  target="_blank">Archivo .MD (Markdown)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/01/01.pdf"  target="_blank">Resultado del .MD en PDF</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/01/01.md">Archivo .MD (Markdown)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/01/01.pdf">Resultado del .MD en PDF</a></p>
                 </article>
                 <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad5/02"  target="_blank">
+                    <a href="/116LMSGIProyectoLMSGI/unidad5/02">
                         <h3>Tarea 2. Información de alumnos: XML, XSL y generación HTML.</h3>
-                        <p><a href="/116LMSGIProyectoLMSGI/unidad5/02/target/index.html"  target="_blank">Resultado (HTML)</a></p>
+                        <p><a href="/116LMSGIProyectoLMSGI/unidad5/02/target/index.html">Resultado (HTML)</a></p>
                     </a>
                 </article>
                 <article>
                     <h3>Tarea 3. Tickets (XML, XSL y HTML)</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/03/input/03.xml"  target="_blank">Input(.XML)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/03/src/03.xsl"  target="_blank">Src(.XSL)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/03/target/index.html"  target="_blank">Resultado (.HTML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/03/input/03.xml">Input(.XML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/03/src/03.xsl">Src(.XSL)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/03/target/index.html">Resultado (.HTML)</a></p>
                 </article>
                 <article>
                     <h3>Tarea 4. Test(XML, XSL, y HTML)</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/04/src/04.xsl"  target="_blank">Src(.XSL)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/04/target/index.html"  target="_blank">Resultado (.HTML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/04/src/04.xsl">Src(.XSL)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/04/target/index.html">Resultado (.HTML)</a></p>
                 </article>
                 <article>
                     <h3>Tarea 5. Usuarios(XML, XSL y XML)</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/05/src/05.xsl"  target="_blank">Src(.XSL)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/05/target/05.xml"  target="_blank">Resultado (.HTML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/05/src/05.xsl">Src(.XSL)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/05/target/05.xml">Resultado (.HTML)</a></p>
                 </article>
                 <article>
                     <h3>Tarea 6. Redes(XML, XSL y HTML)</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/06/src/06.xsl"  target="_blank">Src(.XSL)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/06/target/06.yaml"  target="_blank">Resultado (.HTML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/06/src/06.xsl">Src(.XSL)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/06/target/06.yaml">Resultado (.HTML)</a></p>
                 </article>
                 <article>
                     <h3>Tarea 7. Predicción del tiempo (XMD, XSL, DTD y HTML)</h3>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/07/src/07.xsl"  target="_blank">Src(.XSL)</a></p>
-                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/07/target/07.html"  target="_blank">Resultado (.HTML)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/07/src/07.xsl">Src(.XSL)</a></p>
+                    <p><a href="/116LMSGIProyectoLMSGI/unidad5/07/target/07.html">Resultado (.HTML)</a></p>
                 </article>
                 <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad5/lib/libhtml.xsl"  target="_blank">
+                    <a href="/116LMSGIProyectoLMSGI/unidad5/lib/libhtml.xsl">
                         <h3>Librería de plantillas(LIB).</h3>
                         <p>Plantilla para un documento HTML</p>
                     </a>
@@ -225,35 +225,35 @@
             <h2>Tema 6. Almacenamiento de la información</h2>
             <div>
                 <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad6/01/index.html"  target="_blank">
+                    <a href="/116LMSGIProyectoLMSGI/unidad6/01/01.html">
                         <h3>HTML y JSON</h3>
                         <p>Documento HTML que carga datos de un JSON</p>
                     </a>
                 </article>
                 <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad6/02/index.html"  target="_blank">
+                    <a href="/116LMSGIProyectoLMSGI/unidad6/02/02.html">
                         <h3>HTML y JSON</h3>
                         <p>Documento HTML que carga datos de un JSON</p>
                     </a>
                 </article>
                 <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad6/03/index.html"  target="_blank">
+                    <a href="/116LMSGIProyectoLMSGI/unidad6/03/index.html">
                         <h3>XQuery</h3>
                         <p>Consultas XQuery y resultados</p>
                     </a>
                 </article>
                 <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad6/04/index.html"  target="_blank">
+                    <a href="/116LMSGIProyectoLMSGI/unidad6/04/index.html">
                         <h3>XQuery</h3>
                         <p>Consultas XQuery y resultados</p>
                     </a>
                 </article>
-                <article>
-                    <a href="/116LMSGIProyectoLMSGI/unidad6/05/index.html"  target="_blank">
+                <!--<article>
+                    <a href="/116LMSGIProyectoLMSGI/unidad6/05/index.html">
                         <h3>XQuery</h3>
                         <p>Consultas XQuery y resultados</p>
                     </a>
-                </article>
+                </article>-->
             </div>
         </section>
 
