--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <footer>
         <a href="https://github.com/irenerodriguezrod/116LMSGIProyectoLMSGI" target="_blank"> <!--GitHub-->
-            <i class="fa-brands fa-github" style="color: #000000;"></i>
+            <i class="fa-brands fa-github" style="color: #ffffff;"></i>
         </a>
         <p>2024-25 IES LOS SAUCES. &#169; Todos los derechos reservados. <a href="/index.html">Irene Rodríguez
                 Rodríguez</a></p>
